--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,13 @@
+name = "GraphenePlasmons"
+uuid = "a1f2571c-f0ef-45bc-b7ca-530eef3d1132"
+authors = ["Tom Westerhout <14264576+twesterhout@users.noreply.github.com>"]
+version = "0.1.0"
+
 [deps]
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
+[compat]
+julia = "1.5"
+HDF5 = ">=0.15"
