--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 PGFPlotsX = "8314cec4-20b6-5062-9cdb-752b83310925"
+Plasmons = "e3da8313-7b13-42cc-b482-8d9dd3d42b80"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
