--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Tom Westerhout <14264576+twesterhout@users.noreply.github.com>"]
 version = "0.1.0"
 
 [deps]
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
